css/style.css
/* Defining default colors for dark mode */
:root {
  --bg-color-top: #232430;
  --bg-color-mid: #2e3242;
  --bg-color-bot: #474b62;
  --bg-color: #EDEDED;
  --text-color: white;
  --contrast-color: #dde45b;
  --card-label: #07267b;
  --card-text: #19191f;
  --card-color: #616479;
}

/* General styling */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background: linear-gradient(to bottom, var(--bg-color-top), var(--bg-color-mid) 50%, var(--bg-color-bot) 75%);
}

/* Default text styling */
body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-weight: 100;
  color: var(--text-color);
  line-height: 1.5;
  margin: 0;
  padding: 0;
  position: relative;
}

#summary .athlete {
  background-color: transparent;
}

/* Header */
/* Sticky header for event name and date */
header {
  background-color: var(--bg-color);
  padding: 8px 20px;
  width: 100%;
  position: sticky;
  top: 0;
}

header h1 a {
  font-size: clamp(25px, 4vw, 30px);
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color:var(--bg-color-top);
}

header h2 {
  font-size: 1.2rem;
  color: var(--bg-color-mid);
}

h2 {
  font-size: clamp(24px, 4vw, 28px);
}

/* Navigation Bar */
nav {
  width: 100%;
  padding: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  gap: 20px;
  padding: 5px 0;
}

nav ul li a {
  color: var(--bg-color);
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  transition: 0.2s;
  padding: 10px;
}

nav ul li a:hover {
  border: 2px solid var(--bg-color);
}

/* Skip to Content */
#skip-link {
  color:var(--bg-color);
  display:inline-block;
  margin: 10px 0px 0px 10px;
}

#skip-link:focus {
  border: 2px solid #8f0000;
  transition: 0.2s;
}

/* Default Styling for Main */
main {
  margin: 0 auto;
  padding: 20px;
}

main h2 {
  margin-top: 20px;
  margin-bottom: 10px;
}

/* Tables */
table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 40px;
  background-color: var(--bg-color-bot);
}

th, td {
  padding: 15px;
  text-align: left;
  border-bottom: 1px solid var(--bg-color);
}

th {
  background-color: var(--bg-color);
  color:var(--bg-color-top);
}

/* Alternating row colors */
tr:nth-child(even) {
  background-color: var(--bg-color-mid);
}

tr:hover {
  background-color: var(--bg-color);
  color:var(--card-text);
}

/* Mobile Touch */
tr:active {
  background-color: var(--bg-color);
  color:var(--card-text);
}

/* Individual Results */
p .athlete {
  padding: 0px;
  margin: 0px;
  min-width: 0px;
}

/* athelete cards */
.athlete {
  display: inline-grid;
  background-color: var(--card-color);
  border-radius: 10px;
  align-items: center;
  gap: 20px;
  margin-bottom: 15px;
  padding: 12px;
}

.athlete figcaption {
  text-transform: uppercase;
  text-align: center;
  color: var(--text-color);
  font-weight: bold;
  padding-top: 10px;
}

.athlete dl {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: repeat(3, auto);
  row-gap: 10px;
}

.athlete dt {
  font-weight: bold;
  color: var(--contrast-color);
  grid-column: 1; 
  margin-left: 10px;
}

.athlete dd {
  margin-left: 15px;
  color: var(--text-color);
  grid-column: 2;
}

.athlete img {
  object-fit: cover;
  border-radius: 50%;
}

.athlete:hover {
  background: var(--bg-color);
}

.athlete:hover dt {
  color: var(--card-label);
}

.athlete:hover dd {
  color: var(--card-text)
}

.athlete:hover figcaption {
  color:var(--card-text);
}

.athlete:hover img {
  animation: spin 0.65s 1 linear;
}

/* Same animation but for touch */
.athlete:active {
  background: var(--bg-color);
}

.athlete:active dt {
  color: var(--card-label);
}

.athlete:active dd {
  color: var(--card-text);
}

.athlete:active figcaption {
  color:var(--card-text);
}

.athlete:active img {
  animation: spin 0.65s 1 linear;
}

/* Define keyframes for animation */
@keyframes spin {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(360deg);
  }
}

/* Reduced motion preferences */
@media (prefers-reduced-motion: reduce) {
  .athlete:hover {
    animation: none;
  }
}

/* Gallery */
summary {
  background-color: var(--bg-color);
  color: var(--bg-color-top);
  padding: 10px;
  cursor: pointer;
  border-radius: 4px;
  font-size: 20px;
  outline: none;
  user-select: none;
  margin-top: 15px;
}

/* Remove default marker for summary */
summary::marker {
  content: none;
}

/* Hide arrow for non-webkit browsers */
summary::before {
  content: '▶';
  font-size: 20px;
  display: inline-block;
  margin-right: 5px;
  transition: transform 0.2s;
}

/* Rotate arrow when details are open */
details[open] > summary::before {
  transform: rotate(90deg);
}

#gallery {
  margin-top: 30px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 20px;
}

#gallery img {
  width: 100%;
  border-radius: 10px;
}

#gallery img:hover {
  transform: scale(1.05);
  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
}

/* Mobile Touch */
#gallery img:active {
  transform: scale(1.05);
  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
}

/* Footer */
footer {
  background-color:var(--bg-color-top);
  text-align: center;
  padding: 20px;
}

footer a {
  text-decoration: none;
  color:var(--contrast-color);
}

footer a:hover {
  text-decoration: underline;
}

@media (prefers-color-scheme: light) {
  :root {
    --bg-color-top: #ffffff;
    --bg-color-mid: #dddfe9;
    --bg-color-bot: #c8ccda;
    --bg-color: #2d2f38;
    --text-color: black;
    --contrast-color: #231788;
    --card-label: #ffffff;
    --card-text: white;
    --card-color: rgb(209, 209, 223);
  }
}

